# stockagent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  commands.md  data_sources.md
inputs/: candidates.json
inputs/baselines/: cyclical_pressure_case.json  defensive_dividend.json  event_risk_case.json  high_concentration.json  mean_reversion_case.json  rebound_watchlist.json  sample_case.json  value_rotation.json  weak_market_growth.json
src/stockagent/: __init__.py  api.py  cli.py  config.py  schemas.py
src/stockagent/agent/: __init__.py  analyzer_factory.py  base.py  factory.py  openai_analyst.py  openai_writer.py  report_writer.py  rule_analyzer.py  summary_guard.py
src/stockagent/data/: akshare_provider.py  base.py  factory.py  mock.py  tushare_provider.py
src/stockagent/events/: __init__.py  akshare_provider.py  base.py  factory.py  mock.py  normalizer.py
src/stockagent/services/: backtest_service.py  calibration_service.py  order_execution_service.py  report_history_service.py  report_pdf_service.py  report_service.py  simulation_service.py
src/stockagent/storage/: __init__.py  database.py  models.py  repository.py
src/stockagent/strategy/: __init__.py  scoring.py
src/stockagent/universe/: akshare.py  base.py  factory.py  static.py
src/stockagent/utils/: baseline_runner.py  cache.py  input_loader.py  metadata.py
