[project]
name = "stockagent"
version = "0.1.0"
description = "A-share market analysis agent for daily report and position suggestions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.43",
  "psycopg[binary]>=3.2.9",
  "redis>=6.2.0",
  "pandas>=2.3.0",
  "numpy>=2.3.0",
  "httpx>=0.28.1",
  "openai>=1.99.9",
  "akshare>=1.16.0",
  "tushare>=1.4.24",
  "reportlab>=4.2.2",
]

[project.scripts]
stockagent = "stockagent.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
